<resources>
    <string name="app_name">DashBoard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="enter_initiative_name">Enter Initiative Name</string>
    <string name="submit">Submit</string>
    <string name="initiative_name">Initiative Name</string>
    <string name="add_parameters">Add Parameters</string>
    <string name="enter_parameter">Enter Parameter</string>
    <string name="add">Add</string>
    <string name="enter_description">Enter Description</string>
    <string name="done">Done</string>
    <string name="robert_nigeria">Robert Nigeria</string>
</resources>
