<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:id="@+id/ll"
    tools:context="com.example.lokeshsoni.dashboard.activities.AddParametersActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/init_card_view_linear_layout"
        android:weightSum="1"
        android:orientation="horizontal">
        <ImageView
            android:padding="4dp"
            android:background="@drawable/aicte"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:id="@+id/init_card_view_image"/>
        <TextView
            android:id="@+id/tv_InitiativeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/initiative_name"
            android:layout_weight="0.2"
            android:textSize="40sp"
            />
    </LinearLayout>


    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_parameters"
        android:textSize="20sp"
        />

    <EditText
        android:layout_marginTop="20dp"
        android:id="@+id/et_param"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_parameter"
        />
    <Button
        android:id="@+id/bt_AddParameters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/add"
        android:layout_gravity="bottom|end"
        android:textColor="@color/colorAccent"
        android:background="@color/colorPrimary"
        />
<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:elevation="4dp"
    android:layout_height="wrap_content">

    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/tv_parameter"
        android:paddingLeft="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        />
</android.support.v7.widget.CardView>


    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/bt_Done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="center"
        android:text="@string/done"
        android:textColor="@color/colorAccent"
        android:background="@color/colorPrimary"
        />

</LinearLayout>
