<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_vertical"
    tools:context="com.example.lokeshsoni.dashboard.activities.AddInitiativesActivity">


    <android.support.design.widget.TextInputLayout
        android:layout_margin="10dp"
        android:id="@+id/input_layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_initiative_name" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_des"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_description" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/submit_name"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/submit"
        android:textSize="20sp"

        />

</LinearLayout>
